jira_clone/force-app/main/default/objects/EpicLink__c/EpicLink__c.object-meta.xml
<CustomObject>
    <description>Link between epic and tickets</description>
    <label>Epic Link</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Epic Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epic Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>