jira_clone/force-app/main/default/objects/EpicLink__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Epic reference</description>
    <label>Epic</label>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>Epic Links</relationshipLabel>
    <relationshipName>EpicLinks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>